# cp-core

./: .gitignore  Cargo.toml
.github/workflows/: ci-cd.yaml  ci-only.yaml
src/: config_reader.rs  error.rs  error_kind.rs  lib.rs  macros.rs  test_base.rs
src/auth/: authorization.rs  error_kind.rs  jwt_token.rs  jwt_token_validator.rs  mod.rs  token.rs  token_validator.rs
src/config/: client.rs  default_client_factory.rs  downloader.rs  extractor.rs  file_getter.rs  getter.rs  http_downloader.rs  mod.rs  zip_extractor.rs
src/secrets/: bitwarden_secrets_manager.rs  mod.rs  secrets_manager.rs
test_data/auth/jwt_token_validator/: config.yaml
test_data/config/file_getter/: application.yaml
test_data/config/http_downloader/: config.yaml
test_data/config_reader_test/: config.yaml
test_data/secrets/bitwarden_secrets_manager_test/: config.yaml
tests/: config_reader_test.rs  test_base.rs  tests.rs
tests/secrets/: bitwarden_secrets_manager_test.rs  mod.rs
