[package]
name = "cp-core"
version = "5123.0.0"
edition = "2021"
description = "Core utilities for Cuplan"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

log = "0.4"

rand = "0.8"

# Authorization

axum = { version = "0.7", optional = true }
jsonwebtoken = { version = "9.2", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]

tokio = { version = "1", features = ["full"] }

[features]

auth = ["dep:axum", "dep:jsonwebtoken", "dep:reqwest"]