[package]
name = "cp-core"
version = "5123.0.0"
edition = "2021"
description = "Core utilities for Cuplan"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

log = "0.4"

rand = "0.8"

reqwest = { version = "0.11", features = ["json"] }

zip = "0.6"

# Authorization

axum = { version = "0.7", optional = true }
jsonwebtoken = { version = "9.2", optional = true }

[dev-dependencies]

mockall = "0.12"

uuid = { version = "1.7", features = [ "v4" ] }

[features]

auth = ["dep:axum", "dep:jsonwebtoken"]